--- a/aimHigh/docs/latex/mainwindow_8h_source.tex
+++ b/aimHigh/docs/latex/mainwindow_8h_source.tex
@@ -28,18 +28,19 @@
 \DoxyCodeLine{00038\ \ \ \ \ \mbox{\hyperlink{classMainWindow_ae98d00a93bc118200eeef9f9bba1dba7}{\string~MainWindow}}();}
 \DoxyCodeLine{00039\ }
 \DoxyCodeLine{00040\ \textcolor{keyword}{private}\ slots:}
-\DoxyCodeLine{00049\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classMainWindow_ab2ebb6338f28375833e857a4d191a763}{updateISSData}}(\textcolor{keywordtype}{double}\ longitude,\ \textcolor{keywordtype}{double}\ latitude,\ \textcolor{keywordtype}{double}\ altitude,\ \textcolor{keywordtype}{double}\ velocity,\ \textcolor{keywordtype}{double}\ timestamp);}
+\DoxyCodeLine{00049\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classMainWindow_a2875457cd98936196cc144978ad11b53}{updateISSData}}(\textcolor{keywordtype}{double}\ latidude,\ \textcolor{keywordtype}{double}\ longitude,\ \textcolor{keywordtype}{double}\ altitude,\ \textcolor{keywordtype}{double}\ velocity,\ \textcolor{keywordtype}{double}\ timestamp);}
 \DoxyCodeLine{00050\ }
 \DoxyCodeLine{00051\ \textcolor{keyword}{private}:}
 \DoxyCodeLine{00052\ \ \ \ \ Ui::MainWindow\ *\mbox{\hyperlink{classMainWindow_a35466a70ed47252a0191168126a352a5}{ui}};\ \ \ \ \ \ \ \ \ }
 \DoxyCodeLine{00053\ }
 \DoxyCodeLine{00054\ \ \ \ \ \mbox{\hyperlink{classAPIhandler}{APIhandler}}\ *\mbox{\hyperlink{classMainWindow_af4fc9eddc7897cb3c5a2228d030d50c8}{apiHandler}};\ \ \ \ \ }
-\DoxyCodeLine{00055\ }
-\DoxyCodeLine{00056\ \ \ \ \ QWidget\ *\mbox{\hyperlink{classMainWindow_ae10a7823d4e6a14e71cec217788e54ae}{stats}};\ \ \ \ \ \ \ \ \ \ \ \ \ }
-\DoxyCodeLine{00057\ \ \ \ \ QLabel\ *\mbox{\hyperlink{classMainWindow_a9e2db187227c5c286f6b585163708124}{issInfo}};\ \ \ \ \ \ \ \ \ \ \ \ }
-\DoxyCodeLine{00058\ }
-\DoxyCodeLine{00059\ \ \ \ \ QWidget\ *\mbox{\hyperlink{classMainWindow_a693e2149eb2e23c2e51bba0dd654a60e}{earthModel}};\ \ \ \ \ \ \ \ }
-\DoxyCodeLine{00060\ \};}
-\DoxyCodeLine{00061\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ MAINWINDOW\_H}}
+\DoxyCodeLine{00055\ \ \ \ \ \mbox{\hyperlink{classearthWidget}{earthWidget}}\ *\mbox{\hyperlink{classMainWindow_af530776471e7f42459a46f98e125e087}{earthView}};\ \ \ \ \ }
+\DoxyCodeLine{00056\ }
+\DoxyCodeLine{00057\ \ \ \ \ QWidget\ *\mbox{\hyperlink{classMainWindow_ae10a7823d4e6a14e71cec217788e54ae}{stats}};\ \ \ \ \ \ \ \ \ \ \ \ \ }
+\DoxyCodeLine{00058\ \ \ \ \ QLabel\ *\mbox{\hyperlink{classMainWindow_a9e2db187227c5c286f6b585163708124}{issInfo}};\ \ \ \ \ \ \ \ \ \ \ \ }
+\DoxyCodeLine{00059\ }
+\DoxyCodeLine{00060\ \ \ \ \ QWidget\ *\mbox{\hyperlink{classMainWindow_a693e2149eb2e23c2e51bba0dd654a60e}{earthModel}};\ \ \ \ \ \ \ \ }
+\DoxyCodeLine{00061\ \};}
+\DoxyCodeLine{00062\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ MAINWINDOW\_H}}
 
 \end{DoxyCode}
