--- a/aimHigh/docs/latex/moc__mainwindow_8cpp_source.tex
+++ b/aimHigh/docs/latex/moc__mainwindow_8cpp_source.tex
@@ -47,8 +47,8 @@
 \DoxyCodeLine{00043\ \ \ \ \ \ \ \ \ \textcolor{stringliteral}{"{}MainWindow"{}},}
 \DoxyCodeLine{00044\ \ \ \ \ \ \ \ \ \textcolor{stringliteral}{"{}updateISSData"{}},}
 \DoxyCodeLine{00045\ \ \ \ \ \ \ \ \ \textcolor{stringliteral}{"{}"{}},}
-\DoxyCodeLine{00046\ \ \ \ \ \ \ \ \ \textcolor{stringliteral}{"{}longitude"{}},}
-\DoxyCodeLine{00047\ \ \ \ \ \ \ \ \ \textcolor{stringliteral}{"{}latitude"{}},}
+\DoxyCodeLine{00046\ \ \ \ \ \ \ \ \ \textcolor{stringliteral}{"{}latidude"{}},}
+\DoxyCodeLine{00047\ \ \ \ \ \ \ \ \ \textcolor{stringliteral}{"{}longitude"{}},}
 \DoxyCodeLine{00048\ \ \ \ \ \ \ \ \ \textcolor{stringliteral}{"{}altitude"{}},}
 \DoxyCodeLine{00049\ \ \ \ \ \ \ \ \ \textcolor{stringliteral}{"{}velocity"{}},}
 \DoxyCodeLine{00050\ \ \ \ \ \ \ \ \ \textcolor{stringliteral}{"{}timestamp"{}}}
@@ -83,7 +83,7 @@
 \DoxyCodeLine{00079\ \ \ \ \ \textcolor{keyword}{auto}\ *\_t\ =\ \textcolor{keyword}{static\_cast<}\mbox{\hyperlink{classMainWindow}{MainWindow}}\ *\textcolor{keyword}{>}(\_o);}
 \DoxyCodeLine{00080\ \ \ \ \ \textcolor{keywordflow}{if}\ (\_c\ ==\ QMetaObject::InvokeMetaMethod)\ \{}
 \DoxyCodeLine{00081\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{switch}\ (\_id)\ \{}
-\DoxyCodeLine{00082\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{case}\ 0:\ \_t-\/>\mbox{\hyperlink{classMainWindow_ab2ebb6338f28375833e857a4d191a763}{updateISSData}}((*\textcolor{keyword}{reinterpret\_cast<}\ std::add\_pointer\_t<double>\textcolor{keyword}{>}(\_a[1])),(*\textcolor{keyword}{reinterpret\_cast<}\ std::add\_pointer\_t<double>\textcolor{keyword}{>}(\_a[2])),(*\textcolor{keyword}{reinterpret\_cast<}\ std::add\_pointer\_t<double>\textcolor{keyword}{>}(\_a[3])),(*\textcolor{keyword}{reinterpret\_cast<}\ std::add\_pointer\_t<double>\textcolor{keyword}{>}(\_a[4])),(*\textcolor{keyword}{reinterpret\_cast<}\ std::add\_pointer\_t<double>\textcolor{keyword}{>}(\_a[5])));\ \textcolor{keywordflow}{break};}
+\DoxyCodeLine{00082\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{case}\ 0:\ \_t-\/>\mbox{\hyperlink{classMainWindow_a2875457cd98936196cc144978ad11b53}{updateISSData}}((*\textcolor{keyword}{reinterpret\_cast<}\ std::add\_pointer\_t<double>\textcolor{keyword}{>}(\_a[1])),(*\textcolor{keyword}{reinterpret\_cast<}\ std::add\_pointer\_t<double>\textcolor{keyword}{>}(\_a[2])),(*\textcolor{keyword}{reinterpret\_cast<}\ std::add\_pointer\_t<double>\textcolor{keyword}{>}(\_a[3])),(*\textcolor{keyword}{reinterpret\_cast<}\ std::add\_pointer\_t<double>\textcolor{keyword}{>}(\_a[4])),(*\textcolor{keyword}{reinterpret\_cast<}\ std::add\_pointer\_t<double>\textcolor{keyword}{>}(\_a[5])));\ \textcolor{keywordflow}{break};}
 \DoxyCodeLine{00083\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{default}:\ ;}
 \DoxyCodeLine{00084\ \ \ \ \ \ \ \ \ \}}
 \DoxyCodeLine{00085\ \ \ \ \ \}}
